# torchoptx

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md
.github/workflows/: R-CMD-check.yaml
R/: RcppExports.R  package.R  torchoptx.R
csrc/: CMakeLists.txt
csrc/include/torchoptx/: exports.h  torchoptx_types.h
csrc/src/: exports.cpp  torchoptx.cpp  torchoptx.def  torchoptx_types.cpp
inst/include/lltm/: lltm.h
inst/include/torchoptx/: exports.h  torchoptx.h
src/: Makevars.win  RcppExports.cpp  exports.cpp  exports.h  torchoptx.cpp  torchoptx_types.cpp  torchoptx_types.h
tests/: testthat.R
tests/testthat/: test-lltm.R  test-torchoptx.R
